# vrx23

./: README.md
src/: pose_publisher_plugin.py
src/aritra/: dockerhub_image.txt
src/controls/: package.xml  setup.py
src/controls/controls/: acoskp.py  acou_exec.py  acoustics.py  config1.yml  controller_pwm.py  controller_wamv.py  cvbinary.py  dummyskp.py  guidance_closed.py  guidance_los_vo.py  guidance_wamv.py  joypad.py  joypad2.py  joypadwamv2.py  joypadwamv2copy.py  pid.yml  recordstats.py  resize.py  run_guidance.py  skp_pid.py  stationkeep_wamv.py  syncbag.py  syncbag2.py  syncbagbackup.py  testcombine.py  testdummy.py  testpub.py  testsub.py  testthread.py  yawangle.py
src/controls/controls/install/: setup.sh  (+1 more)
src/controls/install/: local_setup.sh  setup.sh
src/licamfusion/: package.xml  setup.cfg  setup.py
src/licamfusion/licamfusion/: captimg.py  data.yaml  dummy.py  fus.py  fusion.py  gridmap.py  gridmap2.py  gridmap3.py  lidar_perc.py  o3dtut.py  occgrid.py  ofusion.py  pointtransfbackup.py  projectiontoimg.py  quattoeul.py  testimg.py  tflistener.py  transform.py  transform_points.py  transformbackup.py  voxelprocess.py  yolotest.py
src/my_wamv/: creating_custom_wamv
src/my_wamv/dump/: example_thruster_config.xacro  example_thruster_config.yaml  wamv_full.urdf
src/my_wamv/empty_wamv/: empty_wamv.urdf
src/my_wamv/full_wamv/: full_thruster_config.xacro  wamv_target.urdf
src/my_wamv/wamv_groupB/: full_component_config.yaml  full_thruster_config.xacro  full_thruster_config.yaml  wamv_target.urdf
src/mymessages/: CMakeLists.txt  package.xml
src/perception/: CMakeLists.txt  package.xml
src/perception/install/: local_setup.sh  setup.sh
src/perception/install/perception/lib/perception/: clusterros  cpp_code  lidarcluster  listener  talker  voxelros
src/perception/install/perception/share/perception/: package.sh
src/perception/install/perception/share/perception/cmake/: perceptionConfig.cmake
src/perception/src/: clusterros.cpp  framepublisher.py  lidarcluster.cpp  lidcamfus.py  passvoxel.cpp  pclconversions.h  testnode.cpp  testvoxel.cpp  transform.py  voxelros.cpp
src/perception/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh
src/tutorial_interfaces/: CMakeLists.txt  package.xml
src/vrx_sub/: package.xml  setup.cfg  setup.py
src/vrx_sub/launch/: task.launch.py
src/vrx_sub/vrx_sub/: config.py  control.py  controller.csv  controller_gains.py  gain_plot.py  lidar_filter.py  map.py  mission_planner.py  path_planner.py  perception.py  robot_loc.py  tf_reader.py  utils.py  yolo_detect.py
src/wamv_control/: package.xml  setup.py
src/wamv_control/wamv_control/: station_keeping.py
src/wamv_navigation/: package.xml  setup.cfg  setup.py
src/wamv_perception/: package.xml  setup.cfg  setup.py
(+642 files in other folders)
